Adjust swagger and routes
